force-app/main/default/objects/Remittance__c/Remittance__c.object-meta.xml
<CustomObject>
    <label>Dividends</label>
    <nameField>
        <displayFormat>IDiv-{00000}</displayFormat>
        <label>Dividends Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dividends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>