force-app/main/default/objects/Remittance__c/fields/Allocated_Payments_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Payments_Amount__c</fullName>
    <label>Allocated Payments Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>