force-app/main/default/objects/Remittance__c/fields/Allocated_Payments_Count__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Payments_Count__c</fullName>
    <label>Allocated Payments Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>