force-app/main/default/objects/Remittance__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned To</description>
    <inlineHelpText>Assigned To</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Dividends</relationshipName>
    <type>Lookup</type>
</CustomField>