force-app/main/default/objects/Remittance__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <description>Bank Account Number to which Dividend has been moved</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Bank Account Number to which Dividend has been moved</inlineHelpText>
    <label>Bank Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>