force-app/main/default/objects/Remittance__c/fields/CCS_Agency__c.field-meta.xml
<CustomField>
    <fullName>CCS_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CCS Agency lookup</description>
    <inlineHelpText>CCS Agency link</inlineHelpText>
    <label>CCS Agency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CCS_Agency</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dividends (CCS Agency)</relationshipLabel>
    <relationshipName>Dividends</relationshipName>
    <type>Lookup</type>
</CustomField>