force-app/main/default/objects/Remittance__c/fields/Cheque_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Amount__c</fullName>
    <description>Payment Amount</description>
    <inlineHelpText>Payment Amount</inlineHelpText>
    <label>Payment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>