force-app/main/default/objects/Remittance__c/fields/Cheque_Payment_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Payment_Reference_Number__c</fullName>
    <description>A payment reference number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>A payment reference number</inlineHelpText>
    <label>Cheque/ Payment Reference Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>