force-app/main/default/objects/Remittance__c/fields/Deposit_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account_Name__c</fullName>
    <description>Name of custom setting</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of custom setting</inlineHelpText>
    <label>Deposit Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>