force-app/main/default/objects/Remittance__c/fields/Deposit_Account_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account_Name_Formula__c</fullName>
    <description>Populate bank details for Dividend</description>
    <formula>CASE(Deposit_Account_Name__c, 
&apos;CIML&apos;, &apos;CIML - 156&apos;, 
&apos;CCL&apos;, &apos;CCLP - 130&apos;, 
&apos;CAL&apos;, &apos;CAL - 767&apos;, 
&apos;CIH&apos;, &apos;CIHI - 877&apos;, 
&apos;ETC&apos;, &apos;FIM - 810&apos;, 
&apos;AAL&apos;, &apos;CIHI - 877&apos;, 
&apos;AFL&apos;, &apos;ACQ - 618&apos;, 
&apos;CIA&apos;, &apos;CIHI - 877&apos;, 
&apos;AFSI&apos;, &apos;AFSI - 631&apos; 
,null)</formula>
    <inlineHelpText>Populate bank details for Dividend</inlineHelpText>
    <label>Deposit Account Name</label>
    <type>Text</type>
</CustomField>