force-app/main/default/objects/Remittance__c/fields/Dividends_Name_Original__c.field-meta.xml
<CustomField>
    <fullName>Dividends_Name_Original__c</fullName>
    <description>This field gets the value from Dividends Name (Auto Number) field only on record insert. This is used to retain the first generated Auto Number value even after Unarchival.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dividends Name Original</label>
    <length>20</length>
    <type>Text</type>
</CustomField>