force-app/main/default/objects/Remittance__c/fields/Do_Not_Process__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to not include dividend when generating deposit slip</description>
    <label>Do Not Process</label>
    <type>Checkbox</type>
</CustomField>