force-app/main/default/objects/Remittance__c/fields/Email_to_Case_Link__c.field-meta.xml
<CustomField>
    <fullName>Email_to_Case_Link__c</fullName>
    <description>Email to Case Reference Number</description>
    <formula>HYPERLINK(
IF(
CONTAINS($Api.Partner_Server_URL_260, &apos;visual&apos;),
&apos;https://&apos;+
MID($Api.Partner_Server_URL_260, FIND( &apos;visual&apos;, $Api.Partner_Server_URL_260)-4,4)
+&apos;salesforce.com/&apos;,
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))
) + Email_to_Case_Reference_Number__c,
Email_to_Case_Reference_Number__c

)</formula>
    <inlineHelpText>Email to Case Reference Number</inlineHelpText>
    <label>Email to Case Reference Number</label>
    <type>Text</type>
</CustomField>