force-app/main/default/objects/Remittance__c/fields/Email_to_Case_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Email_to_Case_Reference_Number__c</fullName>
    <description>Email to Case Reference Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Email to Case Reference Number</inlineHelpText>
    <label>Email to Case Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>