force-app/main/default/objects/Remittance__c/fields/Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name__c</fullName>
    <description>Entity Name of Bank account to which Dividend has been moved</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Entity Name of Bank account to which Dividend has been moved</inlineHelpText>
    <label>Entity Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>