force-app/main/default/objects/Remittance__c/fields/Fairshare_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fairshare_Amount__c</fullName>
    <description>Total fairshare amount on the striplist</description>
    <inlineHelpText>Total fairshare amount on the striplist</inlineHelpText>
    <label>Fairshare Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>