force-app/main/default/objects/Remittance__c/fields/File_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>File_Processing_Status__c</fullName>
    <inlineHelpText>Processing status of striplist file</inlineHelpText>
    <label>File Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>