force-app/main/default/objects/Remittance__c/fields/Insolvency_Account__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insolvency Account</label>
    <referenceTo>Insolvency_Account__c</referenceTo>
    <relationshipLabel>Dividends</relationshipLabel>
    <relationshipName>Dividends</relationshipName>
    <type>Lookup</type>
</CustomField>