force-app/main/default/objects/Remittance__c/fields/Payment_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Posting_Date__c</fullName>
    <description>Payment Posting Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Payment Posting Date</inlineHelpText>
    <label>Payment Posting Date</label>
    <type>Date</type>
</CustomField>