force-app/main/default/objects/Remittance__c/fields/Payment_Reversal_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reversal_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Reversal Date</label>
    <type>Date</type>
</CustomField>