force-app/main/default/objects/Remittance__c/fields/Striplist_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Striplist_User_ID__c</fullName>
    <description>ID if the user who uploaded the striplist for parsing</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ID if the user who uploaded the striplist for parsing</inlineHelpText>
    <label>Striplist User ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>