force-app/main/default/objects/Remittance__c/fields/Take_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Take_Ownership__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Accept record ownership</description>
    <inlineHelpText>Accept record ownership</inlineHelpText>
    <label>Take Ownership</label>
    <type>Checkbox</type>
</CustomField>