force-app/main/default/objects/Remittance__c/fields/Total_Payments_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments_Amount__c</fullName>
    <description>Total of Allocated and Unallocated Payments amount created from Striplist parsing</description>
    <inlineHelpText>Total of Allocated and Unallocated Payments amount created from Striplist parsing</inlineHelpText>
    <label>Total Payments Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>