force-app/main/default/objects/Remittance__c/fields/Total_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Record_Count__c</fullName>
    <description>total Allocated and Unallocated Payments count created from Striplist</description>
    <inlineHelpText>total Allocated and Unallocated Payments count created from Striplist</inlineHelpText>
    <label>Total Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>