force-app/main/default/objects/Remittance__c/fields/Total_Unallocated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Unallocated_Amount__c</fullName>
    <label>Total Unallocated Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>