force-app/main/default/objects/Remittance__c/fields/Transit_Code__c.field-meta.xml
<CustomField>
    <fullName>Transit_Code__c</fullName>
    <description>Transit Code of Bank account to which Dividend has been moved</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Transit Code of Bank account to which Dividend has been moved</inlineHelpText>
    <label>Transit Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>