force-app/main/default/objects/Remittance__c/fields/Trustee_Name__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Trustee Company lookup</description>
    <inlineHelpText>Trustee Company lookup</inlineHelpText>
    <label>Trustee Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Id</field>
            <operation>equals</operation>
            <value>012f10000015HcqAAE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Remittance</relationshipName>
    <type>Lookup</type>
</CustomField>