force-app/main/default/objects/Remittance__c/fields/Unallocated_Payment_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Unallocated_Payment_Processing_Status__c</fullName>
    <label>Unallocated Payment Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>