force-app/main/default/objects/Remittance__c/fields/Unallocated_Payments_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unallocated_Payments_Amount__c</fullName>
    <label>Unallocated Payments Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>