force-app/main/default/objects/Remittance__c/fields/Unallocated_Payments_Count__c.field-meta.xml
<CustomField>
    <fullName>Unallocated_Payments_Count__c</fullName>
    <label>Unallocated Payments Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>