force-app/main/default/objects/Remittance__c/recordTypes/CCS_Dividend.recordType-meta.xml
<RecordType>
    <fullName>CCS_Dividend</fullName>
    <active>true</active>
    <description>Dividends for CCS strip lists</description>
    <label>CCS Dividend</label>
</RecordType>