force-app/main/default/objects/Remittance__c/recordTypes/Insolvency_Dividend.recordType-meta.xml
<RecordType>
    <fullName>Insolvency_Dividend</fullName>
    <active>true</active>
    <description>Dividends for Insolvency strip lists</description>
    <label>Insolvency Dividend</label>
</RecordType>