force-app/main/default/objects/Remittance__c/validationRules/No_negative_Fairshare_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>No_negative_Fairshare_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND($User.LastName  !=  $Label.DataArchiverUser, Fairshare_Amount__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Fairshare_Amount__c</errorDisplayField>
    <errorMessage>No negative Fairshare Amount allowed</errorMessage>
</ValidationRule>