force-app/main/default/objects/Remittance__c/listViews/CCS_In_Progress.listView-meta.xml
<ListView>
    <fullName>CCS_In_Progress</fullName>
    <columns>NAME</columns>
    <columns>Bank_Account_Number__c</columns>
    <columns>Cheque_Amount__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Remittance__c.CCS_Dividend</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>CCS - In Progress</label>
    <sharedTo>
        <group>CCS_CFG_BS</group>
        <group>CCS_CFG_User</group>
    </sharedTo>
</ListView>