force-app/main/default/objects/Remittance__c/listViews/Insolvency_Processed.listView-meta.xml
<ListView>
    <fullName>Insolvency_Processed</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Cheque_Payment_Reference_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Cheque_Amount__c</columns>
    <columns>Payment_Posting_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Bank_Account_Number__c</columns>
    <columns>Entity_Name__c</columns>
    <columns>Transit_Code__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Processed</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Remittance__c.Insolvency_Dividend</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
    </filters>
    <label>Insolvency - Processed</label>
    <sharedTo>
        <group>Insolvency_CFG_BS</group>
        <group>Insolvency_CFG_Users</group>
        <group>Insolvency_Canaccede_Users</group>
    </sharedTo>
</ListView>